<resources>
    <string name="activity_battery_optimizations_conclusion">If in trouble visit https://dontkillmyapp.com. It provides detailed instructions on how to disable any power-saving features that may affect app\'s performance.</string>
    <string name="activity_battery_optimizations_summary">Please disable battery optimizations for media playback while the screen is off.</string>
    <string name="activity_battery_optimizations_title">Battery Optimizations</string>
    <string name="activity_info_offline_mode">Offline mode</string>
    <string name="album_bottom_sheet_add_to_queue">Add to queue</string>
    <string name="album_bottom_sheet_download_all">Download all</string>
    <string name="album_bottom_sheet_go_to_artist">Go to artist</string>
    <string name="album_bottom_sheet_instant_mix">Instant mix</string>
    <string name="album_bottom_sheet_play_next">Play next</string>
    <string name="album_bottom_sheet_remove_all">Remove all</string>
    <string name="album_bottom_sheet_share">Share</string>
    <string name="album_bottom_sheet_shuffle">Shuffle</string>
    <string name="album_catalogue_title">Albums</string>
    <string name="album_catalogue_title_expanded">Browse Albums</string>
    <string name="album_error_retrieving_artist">Error retrieving artist</string>
    <string name="album_list_page_downloaded">Downloaded albums</string>
    <string name="album_list_page_most_played">Most played albums</string>
    <string name="album_list_page_new_releases">New releases</string>
    <string name="album_list_page_recently_added">Recently added albums</string>
    <string name="album_list_page_recently_played">Recently played albums</string>
    <string name="album_list_page_starred">Starred albums</string>
    <string name="album_list_page_title">Albums</string>
    <string name="album_page_about_section">About</string>
    <string name="album_page_extra_info_button">More like this</string>
    <string name="album_page_play_button">Play</string>
    <string name="album_page_release_date_label">Released on %1$s</string>
    <string name="filter_title">Filter</string>
    <string name="login_empty">You haven\'t added a server of your own yet</string>
    <string name="login_subtitle">Pick where your music plays from</string>
    <string name="login_your_servers">Your servers</string>
    <string name="login_add_server">Add server</string>
    <string name="premium_server_name" translatable="false">Timoha Premium</string>
    <string name="premium_server_host" translatable="false">music.timoha.top</string>
    <string name="premium_server_description">A ready-made library with My Wave. Just sign in with your account.</string>
    <string name="premium_server_log_in">Log in</string>
    <string name="login_title_expanded">Subsonic servers</string>
    <string name="menu_search_button">Search</string>
    <string name="menu_sort_title">Sort</string>
    <string name="settings_about_summary">Platter is an open source and lightweight music client for Subsonic, designed and built natively for Android. It is a fork of Tempo by Antonio Cappiello, released under the GPL v3.</string>
    <string name="settings_about_title">About</string>
    <string name="settings_always_on_display">Always on display</string>
    <string name="settings_audio_transcode_download_priority_summary">If enabled, Platter will not force download the track with the transcode settings below.</string>
    <string name="settings_audio_transcode_download_priority_title">Prioritize server settings used for streaming in downloads</string>
    <string name="settings_audio_transcode_download_summary">If enabled, Platter will download transcoded tracks.</string>
    <string name="settings_audio_transcode_download_title">Download transcoded tracks</string>
    <string name="settings_audio_transcode_estimate_content_length_summary">If enabled, the server will be asked for the estimated duration of the track.</string>
    <string name="settings_audio_transcode_estimate_content_length_title">Estimate content length</string>
    <string name="settings_audio_transcode_format_download">Transcode format for downloads</string>
    <string name="settings_audio_transcode_format_mobile">Transcode format in mobile</string>
    <string name="settings_audio_transcode_format_wifi">Transcode format in Wi-Fi</string>
    <string name="settings_audio_transcode_priority_summary">If enabled, Platter will not force stream the track with the transcode settings below.</string>
    <string name="settings_audio_transcode_priority_title">Prioritize server transcode settings</string>
    <string name="settings_buffering_strategy">Buffering strategy</string>
    <string name="settings_buffering_strategy_summary">For the change to take effect you must manually restart the app.</string>
    <string name="settings_continuous_play_summary">Allows music to keep playing after a playlist has ended, playing similar songs</string>
    <string name="settings_continuous_play_title">Continuous play</string>
    <string name="settings_covers_cache">Size of artwork cache</string>
    <string name="settings_data_saving_mode_summary">In order to reduce data consumption, avoid downloading covers.</string>
    <string name="settings_data_saving_mode_title">Limit mobile data usage</string>
    <string name="settings_delete_download_storage_summary">Proceeding will result in the irreversible deletion of all saved items.</string>
    <string name="settings_delete_download_storage_title">Delete saved items</string>
    <string name="settings_download_storage_title">Download storage</string>
    <string name="settings_equalizer_summary">Adjust audio settings</string>
    <string name="settings_equalizer_title">Equalizer</string>
    <string name="settings_home_rearrangement_title">Rearrange home</string>
    <string name="settings_home_rearrangement_summary">Choose which sections Home shows, and in what order.</string>
    <string name="settings_image_size">Set image resolution</string>
    <string name="settings_language">Language</string>
    <string name="settings_logout_title">Log out</string>
    <string name="settings_max_bitrate_download">Bitrate for downloads</string>
    <string name="settings_max_bitrate_mobile">Bitrate in mobile</string>
    <string name="settings_max_bitrate_wifi">Bitrate in Wi-Fi</string>
    <string name="settings_audio_quality">Show audio quality in track lists</string>
    <string name="settings_audio_quality_summary">The format and bitrate, or bit depth and sample rate, will be shown under each track in lists and in the queue.</string>
    <string name="settings_queue_syncing_countdown">Sync timer</string>
    <string name="settings_queue_syncing_summary">If enabled, the user will have the ability to save their play queue and will have the ability to load state when opening the application.</string>
    <string name="settings_queue_syncing_title">Sync play queue for this user</string>
    <string name="settings_replay_gain">Set replay gain mode</string>
    <string name="settings_rounded_corner_size">Corners size</string>
    <string name="settings_scan_title">Scan library</string>
    <string name="settings_scrobble_title">Enable music scrobbling</string>
    <string name="settings_share_title">Enable music sharing</string>
    <string name="settings_streaming_cache_size">Size of streaming cache</string>
    <string name="settings_streaming_cache_storage_title">Streaming cache storage</string>
    <string name="settings_sub_summary_scrobble">It\'s important to note that scrobbling also relies on the server being enabled to receive this data.</string>
    <string name="settings_summary_replay_gain">Replay gain is a feature that allows you to adjust the volume level of audio tracks for a consistent listening experience. This setting is only effective if the track contains the necessary metadata.</string>
    <string name="settings_summary_scrobble">Scrobbling is a feature that allows your device to send information about the songs you listen to the music server. This information helps create personalized recommendations based on your music preferences.</string>
    <string name="settings_summary_share">Allows the user to share music via a link. The functionality must be supported and enabled server-side and is limited to individual tracks, albums and playlists.</string>
    <string name="settings_summary_syncing">Returns the state of the play queue for this user. This includes the tracks in the play queue, the currently playing track, and the position within this track. The server must support this feature.</string>
    <string name="settings_summary_transcoding">Priority given to the transcoding mode. If set to \"Direct play\" the bitrate of the file will not be changed.</string>
    <string name="settings_summary_transcoding_download">Download transcoded media. If enabled, the download endpoint will not be used, but the following settings. \n\n If \"Transcode format for donwloads\" is set to \"Direct download\" the bitrate of the file will not be changed.</string>
    <string name="settings_summary_transcoding_estimate_content_length">When the file is transcoded on the fly, the client usually does not show the track length. It is possible to request the servers that support the functionality to estimate the duration of the track being played, but the response times may take longer.</string>
    <string name="settings_smart_download_cache_size">Cache size</string>
    <string name="settings_smart_download_title">Save liked tracks you listen to</string>
    <string name="settings_summary_smart_download">A track you listen to and have liked is saved for offline play, in the background and without notifications. Listening alone saves nothing; a like given while it plays counts too. Once the cache is full, the tracks played longest ago make room. Tracks you download yourself or keep as liked are never counted.</string>
    <string name="settings_title_data">Data</string>
    <string name="settings_title_smart_download">Smart download</string>
    <string name="settings_title_general">General</string>
    <string name="settings_title_replay_gain">Replay Gain</string>
    <string name="settings_title_scrobble">Scrobble</string>
    <string name="settings_title_share">Share</string>
    <string name="settings_title_syncing">Syncing</string>
    <string name="settings_title_transcoding">Transcoding</string>
    <string name="settings_title_transcoding_download">Transcoding Download</string>
    <string name="settings_title_ui">UI</string>
    <string name="settings_version_summary" translatable="false">3.1.0</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_wifi_only_summary">Ask for user confirmation before streaming over mobile network.</string>
    <string name="settings_wifi_only_title">Stream via Wi-Fi only alert</string>
    <string name="settings_wave_url_title">My Wave service address</string>
    <string name="settings_wave_url_summary">Leave empty to use your server address with /wave/</string>
    <string name="settings_title_deemix">Deemix plus</string>
    <string name="settings_deemix_account_title">Account</string>
    <string name="settings_deemix_account_loading">Signing in…</string>
    <string name="settings_deemix_url_title">Deemix plus address</string>
    <string name="settings_deemix_url_summary">Leave empty to have the app find it: your server\'s host on port 8088 at home, deemix.&lt;server domain&gt; away</string>
    <string name="settings_deemix_password_title">Deemix plus password</string>
    <string name="settings_deemix_password_summary">Only needed if it differs from your server password</string>
    <string name="settings_update_title">Check for updates</string>
    <string name="settings_update_summary">Looks for a newer Platter on GitHub</string>
</resources>