<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_title_general">
        <Preference
            android:key="equalizer"
            android:title="@string/settings_equalizer_title"
            android:summary="@string/settings_equalizer_summary" />

        <Preference
            android:key="scan_library"
            android:title="@string/settings_scan_title" />

        <Preference
            android:key="logout"
            android:title="@string/settings_logout_title"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_ui">
        <ListPreference
            app:defaultValue="default"
            app:dialogTitle="@string/settings_language"
            app:key="language"
            app:title="@string/settings_language"/>

        <SwitchPreferenceCompat
            android:title="@string/settings_always_on_display"
            android:defaultValue="false"
            android:key="always_on_display" />

        <ListPreference
            app:defaultValue="6"
            app:dialogTitle="@string/settings_rounded_corner_size"
            app:entries="@array/rounded_corner_size_titles"
            app:entryValues="@array/rounded_corner_size_values"
            app:key="rounded_corner_size"
            app:title="@string/settings_rounded_corner_size"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:title="@string/settings_audio_quality"
            android:defaultValue="false"
            android:summary="@string/settings_audio_quality_summary"
            android:key="audio_quality_per_item" />

        <Preference
            android:key="home_rearrangement"
            android:title="@string/settings_home_rearrangement_title"
            android:summary="@string/settings_home_rearrangement_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_data">
        <ListPreference
            app:defaultValue="256"
            app:dialogTitle="@string/settings_streaming_cache_size"
            app:entries="@array/streaming_cache_size_titles"
            app:entryValues="@array/streaming_cache_size_values"
            app:key="streaming_cache_size"
            app:title="@string/settings_streaming_cache_size" />

        <ListPreference
            app:defaultValue="500"
            app:dialogTitle="@string/settings_covers_cache"
            app:entries="@array/pref_cache_size_titles"
            app:entryValues="@array/pref_cache_size_values"
            app:key="image_cache_size"
            app:title="@string/settings_covers_cache"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="-1"
            app:dialogTitle="@string/settings_image_size"
            app:entries="@array/pref_image_size_titles"
            app:entryValues="@array/pref_image_size_values"
            app:key="image_size"
            app:title="@string/settings_image_size"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:title="@string/settings_continuous_play_title"
            android:defaultValue="true"
            android:summary="@string/settings_continuous_play_summary"
            android:key="continuous_play" />

        <EditTextPreference
            android:key="wave_url"
            android:title="@string/settings_wave_url_title"
            android:summary="@string/settings_wave_url_summary"
            android:inputType="textUri"
            android:singleLine="true" />

        <SwitchPreferenceCompat
            android:title="@string/settings_wifi_only_title"
            android:defaultValue="false"
            android:summary="@string/settings_wifi_only_summary"
            android:key="wifi_only" />

        <SwitchPreferenceCompat
            android:title="@string/settings_data_saving_mode_title"
            android:defaultValue="false"
            android:summary="@string/settings_data_saving_mode_summary"
            android:key="data_saving_mode" />

        <ListPreference
            app:defaultValue="1"
            app:dialogTitle="@string/settings_buffering_strategy"
            app:entries="@array/buffering_strategy_titles"
            app:entryValues="@array/buffering_strategy_values"
            app:key="buffering_strategy"
            app:title="@string/settings_buffering_strategy"
            app:summary="@string/settings_buffering_strategy_summary"
            app:useSimpleSummaryProvider="false" />

        <Preference
            android:key="streaming_cache_storage"
            app:title="@string/settings_streaming_cache_storage_title" />

        <Preference
            android:key="download_storage"
            app:title="@string/settings_download_storage_title" />

        <Preference
            android:key="delete_download_storage"
            app:title="@string/settings_delete_download_storage_title"
            app:summary="@string/settings_delete_download_storage_summary"/>
    </PreferenceCategory>

    <!-- Deemix plus: where new music for the library comes from. The account
         row fills in once the app has signed in there. -->
    <PreferenceCategory app:title="@string/settings_title_deemix">
        <Preference
            android:key="deemix_account"
            app:title="@string/settings_deemix_account_title"
            app:summary="@string/settings_deemix_account_loading" />

        <EditTextPreference
            android:key="deemix_url"
            android:title="@string/settings_deemix_url_title"
            android:summary="@string/settings_deemix_url_summary"
            android:inputType="textUri"
            android:singleLine="true" />

        <EditTextPreference
            android:key="deemix_password"
            android:title="@string/settings_deemix_password_title"
            android:summary="@string/settings_deemix_password_summary"
            android:singleLine="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_smart_download">
        <Preference
            app:selectable="false"
            app:summary="@string/settings_summary_smart_download" />

        <SwitchPreferenceCompat
            android:title="@string/settings_smart_download_title"
            android:defaultValue="false"
            android:key="smart_download" />

        <!-- Entries are worded in SettingsFragment, with plurals -->
        <ListPreference
            app:defaultValue="100"
            app:dependency="smart_download"
            app:dialogTitle="@string/settings_smart_download_cache_size"
            app:entries="@array/smart_download_cache_size_values"
            app:entryValues="@array/smart_download_cache_size_values"
            app:key="smart_download_cache_size"
            app:title="@string/settings_smart_download_cache_size"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_transcoding">
        <Preference
            app:selectable="false"
            app:summary="@string/settings_summary_transcoding" />

        <SwitchPreferenceCompat
            android:title="@string/settings_audio_transcode_priority_title"
            android:defaultValue="false"
            android:summary="@string/settings_audio_transcode_priority_summary"
            android:key="audio_transcode_priority" />

        <ListPreference
            app:defaultValue="raw"
            app:dialogTitle="@string/settings_audio_transcode_format_wifi"
            app:entries="@array/audio_transcode_format_wifi_list_titles"
            app:entryValues="@array/audio_transcode_format_wifi_list_values"
            app:key="audio_transcode_format_wifi"
            app:title="@string/settings_audio_transcode_format_wifi"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:dialogTitle="@string/settings_max_bitrate_wifi"
            app:entries="@array/max_bitrate_wifi_list_titles"
            app:entryValues="@array/max_bitrate_wifi_list_values"
            app:key="max_bitrate_wifi"
            app:title="@string/settings_max_bitrate_wifi"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="raw"
            app:dialogTitle="@string/settings_audio_transcode_format_mobile"
            app:entries="@array/audio_transcode_format_mobile_list_titles"
            app:entryValues="@array/audio_transcode_format_mobile_list_values"
            app:key="audio_transcode_format_mobile"
            app:title="@string/settings_audio_transcode_format_mobile"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:dialogTitle="@string/settings_max_bitrate_mobile"
            app:entries="@array/max_bitrate_mobile_list_titles"
            app:entryValues="@array/max_bitrate_mobile_list_values"
            app:key="max_bitrate_mobile"
            app:title="@string/settings_max_bitrate_mobile"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:title="@string/settings_audio_transcode_estimate_content_length_title"
            android:defaultValue="false"
            android:summary="@string/settings_audio_transcode_estimate_content_length_summary"
            android:key="estimate_content_length" />

        <Preference
            app:selectable="false"
            app:summary="@string/settings_summary_transcoding_estimate_content_length" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_transcoding_download">
        <Preference
            app:selectable="false"
            app:summary="@string/settings_summary_transcoding_download" />

        <SwitchPreferenceCompat
            android:title="@string/settings_audio_transcode_download_title"
            android:defaultValue="false"
            android:summary="@string/settings_audio_transcode_download_summary"
            android:key="audio_transcode_download" />

        <SwitchPreferenceCompat
            android:title="@string/settings_audio_transcode_download_priority_title"
            android:defaultValue="false"
            android:summary="@string/settings_audio_transcode_download_priority_summary"
            android:key="audio_transcode_download_priority" />

        <ListPreference
            app:defaultValue="raw"
            app:dialogTitle="@string/settings_audio_transcode_format_download"
            app:entries="@array/audio_transcode_format_download_list_titles"
            app:entryValues="@array/audio_transcode_format_download_list_values"
            app:key="audio_transcode_format_download"
            app:title="@string/settings_audio_transcode_format_download"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:dialogTitle="@string/settings_max_bitrate_download"
            app:entries="@array/max_bitrate_download_list_titles"
            app:entryValues="@array/max_bitrate_download_list_values"
            app:key="max_bitrate_download"
            app:title="@string/settings_max_bitrate_download"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_replay_gain">
        <Preference
            app:selectable="false"
            app:summary="@string/settings_summary_replay_gain" />

        <ListPreference
            app:defaultValue="disabled"
            app:dialogTitle="@string/settings_replay_gain"
            app:entries="@array/replay_gain_titles"
            app:entryValues="@array/replay_gain_values"
            app:key="replay_gain_mode"
            app:title="@string/settings_replay_gain"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_scrobble">
        <Preference
            app:selectable="false"
            app:summary="@string/settings_summary_scrobble" />

        <Preference
            app:selectable="false"
            app:summary="@string/settings_sub_summary_scrobble" />

        <SwitchPreferenceCompat
            android:title="@string/settings_scrobble_title"
            android:defaultValue="true"
            android:key="scrobbling" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_share">
        <Preference
            app:selectable="false"
            app:summary="@string/settings_summary_share" />

        <SwitchPreferenceCompat
            android:title="@string/settings_share_title"
            android:defaultValue="false"
            android:key="share" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_title_syncing">
        <Preference
            app:selectable="false"
            app:summary="@string/settings_summary_syncing" />

        <SwitchPreferenceCompat
            android:title="@string/settings_queue_syncing_title"
            android:defaultValue="false"
            android:summary="@string/settings_queue_syncing_summary"
            android:key="queue_syncing" />

        <ListPreference
            app:defaultValue="5"
            app:dialogTitle="@string/settings_queue_syncing_countdown"
            app:entries="@array/queue_syncing_countdown_titles"
            app:entryValues="@array/queue_syncing_countdown_values"
            app:key="queue_syncing_countdown"
            app:title="@string/settings_queue_syncing_countdown"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_about_title">
        <Preference
            app:selectable="false"
            app:summary="@string/settings_about_summary" />

        <Preference
            android:key="update"
            app:title="@string/settings_update_title"
            app:summary="@string/settings_update_summary" />

        <Preference
            android:key="version"
            app:summary="@string/settings_version_summary"
            app:title="@string/settings_version_title" />
    </PreferenceCategory>
</PreferenceScreen>