<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search_button"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_filter_genres"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/filter_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort_genres"
        android:icon="@drawable/ic_sort_list"
        android:title="@string/menu_sort_title"
        app:showAsAction="ifRoom" />
</menu>
